B-F Sandbox Full-Backup/src/objects/Outlet_Visit__c.object
<CustomObject>
    <fields>
        <fullName>AccountName__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountNumber__c</fullName>
        <formula>Account__r.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountNumber</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outlet (Account)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Outlet Visits</relationshipLabel>
        <relationshipName>Outlet_Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Competitor_Activity__c</fullName>
        <label>Competitor Activity</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Create_Offline_OVIs__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Infowelders -- used to create Offline OVIs in batchable class.</description>
        <label>Create Offline OVIs?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Follow_Up__c</fullName>
        <description>Follow-Up items from the outlet visit</description>
        <inlineHelpText>Enter any follow-up items from the outlet visit</inlineHelpText>
        <label>Follow-Up</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Visit_Date__c</fullName>
        <description>P00001 - Created by PARX to improve reporting on Last Visits</description>
        <formula>today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Data is Today if Visit is last visit otherwise Visit Date. This allows Last Visits of Accounts visited long ago to appear in Last Visit reports. This is useful to compare the same set of accounts again and again.</inlineHelpText>
        <label>Last Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Visit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>P00001  - Created by PARX to improve reporting on Last Visits</description>
        <label>Last Visit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_Code__c</fullName>
        <label>Legacy Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Met_With__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Met With (Contact)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Outlet Visits</relationshipLabel>
        <relationshipName>Outlet_Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Next_to_Last_Visit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>P00001  - Created by PARX to improve reporting on Last Visits</description>
        <label>Next to Last Visit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Objectives__c</fullName>
        <label>Objectives</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Offline_Use__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field is set by a scheduled APEX class and is used by offline briefcase configurations</description>
        <label>Offline_Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Time_Tracking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PARX - Jochen Schrader: Needed for a weekly report about the number of visits done by a sales rep and his possible (maximum) number of visits that can be calculated by his timetracking</description>
        <label>Time Tracking</label>
        <referenceTo>Time_Tracking__c</referenceTo>
        <relationshipLabel>Outlet Visits</relationshipLabel>
        <relationshipName>Outlet_Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Venue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Venue</label>
        <referenceTo>Venue__c</referenceTo>
        <relationshipLabel>Outlet Visits</relationshipLabel>
        <relationshipName>Outlet_Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Visit_Comments__c</fullName>
        <label>Visit Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Visit_Counts__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visit Counts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visit_Date_Month__c</fullName>
        <description>Needed for a trigger in Time Tracking to select the right outlet visits</description>
        <formula>Year(Visit_Date__c)* 100 + Month( Visit_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Month &amp; Year of Visit Date</inlineHelpText>
        <label>Visit Date Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visit_Date__c</fullName>
        <label>Visit Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Outlet Visit</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OV-{00000}</displayFormat>
        <label>Outlet Visit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outlet Visits</pluralLabel>
    <recordTypes>
        <fullName>X1</fullName>
        <active>true</active>
        <description>Record type to facilitate VF page layout 1</description>
        <label>1</label>
    </recordTypes>
    <recordTypes>
        <fullName>X2</fullName>
        <active>true</active>
        <description>Record type to facilitate VF page layout 2</description>
        <label>2</label>
    </recordTypes>
    <recordTypes>
        <fullName>X3</fullName>
        <active>true</active>
        <description>Record type to facilitate VF page layout 3</description>
        <label>3</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Substitution__c</fullName>
        <label>Substitution</label>
    </sharingReasons>
</CustomObject>